Fixing image width on mobile

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -11,10 +11,11 @@ body {
   color: #ffffff;
   margin-top: 4rem;
   backdrop-filter: blur(8px);
-  text-align: center; }
+  text-align: center;
+  justify-content: center; }
 
 .singup-logo {
-  max-width: 400px; }
+  max-width: 80%; }
 
 .signup-title {
   margin-top: 5rem;
