--- a/docs/sass/modules/_sign-up-card.sass
+++ b/docs/sass/modules/_sign-up-card.sass
@@ -9,9 +9,10 @@
     margin-top: 4rem
     backdrop-filter: blur(8px)
     text-align: center
+    justify-content: center
 
 .singup-logo
-    max-width: 400px
+    max-width: 80%
 
 .signup-title
     margin-top: 5rem
